Remove unused files.

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ crashlytics-build.properties
 
 ProjectSettings/AndroidResolverDependencies.xml
 ProjectSettings/GvhProjectSettings.xml
+ProjectSettings/RiderScriptEditorPersistedState.asset
+ProjectSettings/Packages/com.unity.probuilder
