--- a/.gitignore
+++ b/.gitignore
@@ -89,5 +89,7 @@ ProjectSettings/Packages/com.unity.probuilder
 UIElementsSchema
 UnityDefaultRuntimeTheme.tss*
 
-/OneJS/Components/*.js
-/OneJS/Screens/*.js
+/OneJS/Components/**/*.js
+/OneJS/Screens/**/*.js
+
+.DS_Store
