--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.inputsystem": "1.4.4",
     "com.unity.mathematics": "1.2.6",
     "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.nuget.newtonsoft-json": "3.0.2",
     "com.unity.probuilder": "5.0.6",
     "com.unity.render-pipelines.universal": "12.1.8",
     "com.unity.test-framework": "1.1.33",
